--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@ Hello world
   <body>
     <h1>Hello World</h1>
     <p>Welcome to my webpage.</p>
+    <img src="ballerina-young-graceful-woman-ballet-260nw-725790448.webp.jpg"alt=Young Graceful Ballerina in Red"/>
   </body>
 </html>
