--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ Hello world
   <body>
     <h1>Hello World</h1>
     <p>Welcome to my webpage.</p>
-    <img src="ballerina-young-graceful-woman-ballet-260nw-725790448.webp"alt=Young Graceful Ballerina in Red"/>
+    <img src="ballerina in red.jpg"alt=Ballerina in Red"/>
   </body>
 </html>
