--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ Hello world
   <body>
     <h1>Hello World</h1>
     <p>Welcome to my webpage.</p>
-    <img src="ballerina 3.jpg"alt=Ballerina in Red"/>
+    <img src="Ballerina 3.jpg"alt=Ballerina in Red"/>
   </body>
 </html>
