--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ Hello world
   <head>
     <meta charset="utf-8">
     <title>CMPT 104</title>
+    <link rel="stylesheet" href="mystyle.css">
   </head>
   <body>
     <h1>Hello World</h1>
