--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Hello world
   </head>
   <body>
     <h1>Hello World</h1>
-    <p>Welcome to my webpage.</p>
+    <p class="fancy">Welcome to my webpage.</p>
     <img src="Ballerina in red 2.jpg"alt=Ballerina in Red"/>
   </body>
 </html>
