--- a/Ballerina.html
+++ b/Ballerina.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <ol>
-<li>Ballerina</li>
+<li class="fancy">Ballerina</li>
   <p> Ballerinas are graceful and fluid.</p>
-<li>Tutu</li>
-<li>Dance</li>
-<li>Grace</li>
+<li class="fancy">Tutu</li>
+<li class="fancy">Dance</li>
+<li class="fancy">Grace</li>
 </ol>
 <a href="index.html">This is a link to home</a>
 </body>
