--- a/Ballerina.html
+++ b/Ballerina.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <ol>
-<li p.class="fancy">Ballerina</li>
+<li>Ballerina</li>
   <p> Ballerinas are graceful and fluid.</p>
-<li p.class="fancy">Tutu</li>
-<li p.class="fancy">Dance</li>
-<li p.class="fancy">Grace</li>
+<li>Tutu</li>
+<li>Dance</li>
+<li>Grace</li>
 </ol>
 <a href="index.html">This is a link to home</a>
 </body>
