--- a/Ballerina.html
+++ b/Ballerina.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>CMPT 104</title>
+<title>CMPT 104a</title>
   <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
