--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hello World</h1>
     <p class="fancy">Welcome to my webpage.</p>
     <img src="Ballerina in red 2.jpg"alt=Ballerina in Red"/>
+                                                          <a href="Ballerina.html">Ballerina</a>
   </body>
 </html>
