--- a/Ballerina.html
+++ b/Ballerina.html
@@ -8,8 +8,9 @@
 <body>
 <ol>
 <li>Ballerina</li>
-  <p> Ballerinas are graceful and fluid.</p>
+  <p> Ballerinas, or ballet dancers, use their bodies to tell a story through dance. Accompanied by an orchestra, they use the music to help them connect with their audience.</p>
 <li>Tutu</li>
+  <p> A tutu is a piece of clothing worn by female ballet dancers. It is either short and stiff and protrudes out from the hip, or can be longer and softer and fall in a bell-like fashion. Tutus are usually attached to the bodice of the dress. They can be made from a number of different materials such as tulle, muslin or silk.</p>
 <li>Dance</li>
 <li>Grace</li>
 </ol>
