--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>CMPT 104b</title>
+  <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
 <h2>Ballerinaland</h2>
