--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-<h2>Ballerinaland</h2>
-<p>Ballerinaland is for those that love to dance.</p>
+<h2>Ballerina-land</h2>
+<p>Ballerina-land is for those that love to dance.</p>
 </body>
 </html>
