--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p class="fancy">Welcome to my webpage.</p>
     <img src="Ballerina in red 2.jpg"alt=Ballerina in Red"/>
                                                           <a href="Ballerina.html">Ballerina</a>
-                                                                                  <a href="Ballerinaland.html">Ballerinaland</a>                                                                              
+                                                                                  <a href="Ballerinaland.html">Ballerina-land</a>                                                                              
   </body>
 </html>
