--- a/Ballerina.html
+++ b/Ballerina.html
@@ -12,7 +12,7 @@
 <li>Tutu</li>
   <p> A tutu is a piece of clothing worn by female ballet dancers. It is either short and stiff and protrudes out from the hip, or can be longer and softer and fall in a bell-like fashion. Tutus are usually attached to the bodice of the dress. They can be made from a number of different materials such as tulle, muslin or silk.</p>
 <li>Dance</li>
-<li>Grace</li>
+<li>Ballet Slippers</li>
 </ol>
 <a href="index.html">This is a link to home</a>
 </body1>
