--- a/Ballerina.html
+++ b/Ballerina.html
@@ -5,7 +5,7 @@
 <title>CMPT 104a</title>
   <link rel="stylesheet" href="mystyle.css">
 </head>
-<body1>
+<body class=fancy>
 <ol>
 <li>Ballerina</li>
   <p> Ballerinas, or ballet dancers, use their bodies to tell a story through dance. Accompanied by an orchestra, they use the music to help them connect with their audience.</p>
@@ -15,4 +15,4 @@
 <li>Ballet Slippers</li>
 </ol>
 <a href="index.html">This is a link to home</a>
-</body1>
+</body>
