--- a/Ballerina.html
+++ b/Ballerina.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="mystyle.css">
 </head>
 <body class=fancy>
+  <h1>Ballerina Factiods</h1>
 <ol>
 <li>Ballerina</li>
   <p> Ballerinas, or ballet dancers, use their bodies to tell a story through dance. Accompanied by an orchestra, they use the music to help them connect with their audience.</p>
