--- a/Ballerina.html
+++ b/Ballerina.html
@@ -13,8 +13,10 @@
   <img src="Swan Lake.jpg" alt="Swan Lake" style="width:600px; height:360px;" />
 <li>Tutu</li>
   <p> A tutu is a piece of clothing worn by female ballet dancers. It is either short and stiff and protrudes out from the hip, or can be longer and softer and fall in a bell-like fashion. Tutus are usually attached to the bodice of the dress. They can be made from a number of different materials such as tulle, muslin or silk.</p>
+  <img src="Tutu.jpg" alt="Tutu" style="width:371.5px; height:512px;" />
 <li>Dance</li>
 <li>Ballet Slippers</li>
+  <img src="Pointe Shoes.jpg" alt="Pointe Shoes" style="width:324px; height:187.5px; />
 </ol>
 <a href="index.html">This is a link to home</a>
 </body>
