--- a/Ballerina.html
+++ b/Ballerina.html
@@ -16,7 +16,7 @@
   <img src="Tutu.jpg" alt="Tutu" style="width:371.5px; height:512px;" />
 <li>Dance</li>
 <li>Ballet Slippers</li>
-  <img src="Pointe Shoes.jpg" alt="Pointe Shoes" style="width:324px; height:187.5px; />
+  <img src="Pointe Shoe.jpg" alt="Pointe Shoes" style="width:324px; height:187.5px; />
 </ol>
 <a href="index.html">This is a link to home</a>
 </body>
