--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Hello World</h1>
     <p class="fancy">Welcome to my webpage.</p>
-    <img src="Ballerina in red 2.jpg"alt=Ballerina in Red"/>
+    <img src="Ballerina in red 2.jpg"alt=Ballerina in Red" style="width:402px; height:420px;"/>
                                                           <a href="Ballerina.html">Ballerina</a>
                                                                                   <a href="Ballerinaland.html">Ballerina-land</a>                                                                              
   </body>
