--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CMPT 104</title>
     <link rel="stylesheet" href="mystyle.css">
   </head>
-  <body>
+  <body class=subtle>
     <h1>Hello World</h1>
     <p class="fancy">Welcome to my webpage.</p>
     <img src="Ballerina in red 2.jpg"alt=Ballerina in Red" style="width:335px; height:350px;"/>
