--- a/Ballerina.html
+++ b/Ballerina.html
@@ -19,6 +19,7 @@
 <li>Ballet Slippers</li>
   <p> Ballet slippers are also known as pointe shoes. They are covered in satin and come mainly in different shades of pink. The toe is traditionally made from layers of cardboard and glue that are shaped into a "box" which is how the dancer is able to balance ontheir toes. The sole is made from leather and gives the dancer traction on smooth sufaces, such as stages, but also acts as a support for the arch of the foot.</p>
   <img src="Pointe Shoe.jpg" alt="Pointe Shoes" style="width:324px; height:187.5px; />
+       <p>Fun Fact: The New York City Ballet uses over 8500 pointe shoes each year for only 180 dancers.</p>
 </ol>
 <a href="index.html">This is a link to home</a>
 </body>
