--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>CMPT 104</title>
     <link rel="stylesheet" href="mystyle.css">
   </head>
-  <body class=subtle>
+  <body class="subtle">
     <h1>Hello World</h1>
     <p class="fancy">Welcome to my webpage.</p>
     <img src="Ballerina in red 2.jpg"alt=Ballerina in Red" style="width:335px; height:350px;"/>
                                                           <a href="Ballerina.html">Ballerina</a>
-                                                                                  <a href="Ballerinaland.html">Ballerina-land</a>                                                                              
+     <a href="Ballerinaland.html">Ballerina-land</a>                                                                              
   </body>
 </html>
