--- a/Ballerina.html
+++ b/Ballerina.html
@@ -18,8 +18,9 @@
   <p> Professional dancers train fom as early an age as 5 to become ballerinas. There are many dance companies around the world. The most prestigious among them are the Bolshoi Ballet from Russia, The American Ballet Theatre from the United States and the Paris Opera Ballet from France.</p>
 <li>Ballet Slippers</li>
   <p> Ballet slippers are also known as pointe shoes. They are covered in satin and come mainly in different shades of pink. The toe is traditionally made from layers of cardboard and glue that are shaped into a "box" which is how the dancer is able to balance ontheir toes. The sole is made from leather and gives the dancer traction on smooth sufaces, such as stages, but also acts as a support for the arch of the foot.</p>
-  <img src="Pointe Shoe.jpg" alt="Pointe Shoes" style="width:324px; height:187.5px; />
-</ol>
-  <p> Fun Fact: The New York City Ballet Comapny goes through over 8500 pointe shoes each year for only 100 dancers. That's 85 pairs of shoes per dancer per year and almost 8 pairs per month!</p>                                                       
+  <img src="Pointe Shoe.jpg" alt="Pointe Shoes" style="width:324px; height:187.5px; /> 
+                                                       </ol>
+                                                       <h1>Fun Fact:</h1>                                                       
+<p>Fun Fact: The New York City Ballet Comapny goes through over 8500 pointe shoes each year for only 100 dancers. That's 85 pairs of shoes per dancer per year and almost 8 pairs per month!</p>                                                       
 <a href="index.html">This is a link to home</a>
 </body>
