--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -10,5 +10,6 @@
 <p>Ballerina-land is for those that love to dance.</p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/LKcZL8q1eBw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p>Doesn't this just make you want to get up and dance?</p> 
+  <a href="index.html">Link to home</a>
 </body>
 </html>
