--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -23,6 +23,25 @@
       <td> Jean-Madeleine Schneitzhoeffer</td>
       <td> Filippo Taglioni</td>
       <td> 1832 at Salle Le Peletier</td>
+    </tr>
+    <tr>
+      <td> Nutcracker</td>
+      <td> Pyotr Ilyich Tchaikovsky</td>
+      <td> Marius Petipa and Lev Ivanov</td>
+      <td> 1892 at the Mariinsky Theatre</td>
+    </tr>
+    <tr>
+      <td> Giselle</td>
+      <td> Adolph Adam</td>
+      <td> Jean Coralli and JUles Perrot</td>
+      <td> 1841 at Salle Le Peletier</td>
+    </tr>
+    <tr>
+      <td> Swan Lake</td>
+      <td> Pyotr Ilyich Tchaikovsky</td>
+      <td> Julius Reisinger</td>
+      <td> 1877 at Bolshoi Theatre</td>
+    </tr>
   <a href="index.html">Link to home</a>
 </body>
 </html>
