--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -42,6 +42,7 @@
       <td> Julius Reisinger</td>
       <td> 1877 at Bolshoi Theatre</td>
     </tr>
+  </table>
   <a href="index.html">Link to home</a>
 </body>
 </html>
