--- a/Ballerina.html
+++ b/Ballerina.html
@@ -16,6 +16,7 @@
   <img src="Tutu.jpg" alt="Tutu" style="width:371.5px; height:512px;" />
 <li>Dance</li>
   <p> Professional dancers train fom as early an age as 5 to become ballerinas. There are many dance companies around the world. The most prestigious among them are the Bolshoi Ballet from Russia, The American Ballet Theatre from the United States and the Paris Opera Ballet from France.</p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/7zXfYygXX0I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <li>Ballet Slippers</li>
   <p> Ballet slippers are also known as pointe shoes. They are covered in satin and come mainly in different shades of pink. The toe is traditionally made from layers of cardboard and glue that are shaped into a "box" which is how the dancer is able to balance ontheir toes. The sole is made from leather and gives the dancer traction on smooth sufaces, such as stages, but also acts as a support for the arch of the foot.</p>
   <img src="Pointe Shoe.jpg" alt="Pointe Shoes" style="width:324px; height:187.5px;" />
