--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -43,7 +43,7 @@
       <td> 1877 at Bolshoi Theatre</td>
     </tr>
   </table>
-  <p> THe world's oldest ballets are still the most popular ones.  Among these are also Don Quixote, Romeo and Juliet and La Bayadere.</p>
+  <p> The world's oldest ballets are still the most popular ones.  Among these are also Don Quixote, Romeo and Juliet and La Bayadere.</p>
   <a href="index.html">Link to home</a>
 </body>
 </html>
