--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <body class="subtle">
     <h1>Hello World</h1>
     <p class="fancy">Welcome to my webpage.</p>
-    <img src="Ballerina in red 2.jpg"alt=Ballerina in Red" style="width:335px; height:350px;"/>
+    <img src="Ballerina in red 2.jpg"alt="Ballerina in Red" style="width:335px; height:350px;"/>
                                                           <a href="Ballerina.html">Ballerina</a>
-     <a href="Ballerinaland.html">Ballerina-land</a>                                                                              
+     <a href="Ballerinaland.html">Ballerina-land</a>
+    <p><i> Ballerina-Land is inspired by two little girls who make the idea of becoming a dancer a beautiful dream. The way their faces light up when they talk about dancing, or how a tutu is considered a must-have clothing item for everyday wear, gives those of us who once dreamed of being a ballerina a nostalgic and hopeful feeling.</i></p>
   </body>
 </html>
