--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <img src="Ballerina in red 2.jpg"alt="Ballerina in Red" style="width:335px; height:350px;"/>
                                                           <a href="Ballerina.html">Ballerina</a>
      <a href="Ballerinaland.html">Ballerina-land</a>
-    <p><i> Ballerina-Land is inspired by two little girls who make the idea of becoming a dancer a beautiful dream. The way their faces light up when they talk about dancing, or how a tutu is considered a must-have clothing item for everyday wear, gives those of us who once dreamed of being a ballerina a nostalgic and hopeful feeling.</i></p>
+    <p><i> Ballerina-Land is inspired by two little girls whose faces light up at the mention of Ballerinas. They fully believe that tutus are everyday wear, go with every outfit and that dancing is AMAZING!</i></p>
+    <img src="Fave Ballerina.jpg" alt="List of Ballerina Favorites" />
+    <p> Ballet originates from Italy in the 1500's. This was during the Renaissance Period when Europe had<br>
+      emerged from the Middle Ages and started to explore new ways of thinking, new ideas in architecture<br>
+      and politics and overall great social change. Historians say that the birthplace of the Renaissance came<br>
+      from the Italian city of Florence and the patriarchal family of Florence is credited with this emergence<br>
+      of change. This family, the Medici's, were a dynasty that lasted several hundred years and were patrons of<br>
+      Michelangelo, Leonardo da Vinci, Raphael, Galileo and more. They funded St. Peter's Basilica, Santa Maria<br>
+      del Fiore and financed the invention of opera and the piano. Catherine de Medici married King Henry II of<br>
+      France and brought with her her love of the arts. When festivals were being held she made the directors<br>
+      feature more dance numbers for the climaxes of the shows and this lead to a new art form called<br>
+      <i>ballet de cour</i>. The first authentic ballet was titled<i> Ballet Comique de la Reine</i> and debuted <br>
+      in 1581. Since its inception, ballet has evolved into what we know it to be. In 1827 Romantic Ballet was<br>
+      born with La Sylphide, performed by Marie Taglioni. It was inspired by Romanticism and also introduced<br>
+      pointework into the ballet dancers repertoire.</p>
   </body>
 </html>
