--- a/Ballerina.html
+++ b/Ballerina.html
@@ -12,7 +12,7 @@
   <p> Ballerinas, or ballet dancers, use their bodies to tell a story through dance. Accompanied by an orchestra, they use the music to help them connect with their audience.</p>
   <img src="Swan Lake.jpg" alt="Swan Lake" style="width:600px; height:360px;" />
 <li>Tutu</li>
-  <p> A tutu is a piece of clothing worn by female ballet dancers. It is either short and stiff and protrudes out from the hip, or can be longer and softer and fall in a bell-like fashion. Tutus are usually attached to the bodice of the dress. They can be made from a number of different materials such as tulle, muslin or silk.</p>
+  <p> A tutu is a piece of clothing worn by female ballet dancers. The Classic tutu is short and stiff and protrudes out from the hip, and the Romantic tutu is longer, softer and fall in a bell-like fashion. Tutus are usually attached to the bodice of the dress. They can be made from a number of different materials such as tulle, muslin or silk. The modern tutu comes in several different styles such as the Pancake tutu, the Platter tutu and the American tutu.</p>
   <img src="Tutu.jpg" alt="Tutu" style="width:371.5px; height:512px;" />
 <li>Dance</li>
   <p> Professional dancers train fom as early an age as 5 to become ballerinas. There are many dance companies around the world. The most prestigious among them are the Bolshoi Ballet from Russia, The American Ballet Theatre from the United States and the Paris Opera Ballet from France.</p>
