--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                                                           <a href="Ballerina.html">Ballerina</a>
      <a href="Ballerinaland.html">Ballerina-land</a>
     <p><i> Ballerina-Land is inspired by two little girls whose faces light up at the mention of Ballerinas. They fully believe that tutus are everyday wear, go with every outfit and that dancing is AMAZING!</i></p>
-    <img src="Fave Ballerina.jpg"alt="List of Ballerina Favorites" style="width:151.2px; height:201.6px;" />
+    <img src="Fave Ballerina.JPG"alt="List of Ballerina Favorites" style="width:151.2px; height:201.6px;" />
     <p> Ballet originates from Italy in the 1500's. This was during the Renaissance Period when Europe had<br>
       emerged from the Middle Ages and started to explore new ways of thinking, new ideas in architecture<br>
       and politics and overall great social change. Historians say that the birthplace of the Renaissance came<br>
