--- a/Ballerina.html
+++ b/Ballerina.html
@@ -10,16 +10,16 @@
 <ol>
 <li>Ballerina</li>
   <p> Ballerinas, or ballet dancers, use their bodies to tell a story through dance. Accompanied by an orchestra, they use the music to help them connect with their audience.</p>
-  <img src="Swan Lake.jpg" alt="Swan Lake" style="width:600px; height:360px;" />
+  <img src="SwanLake.jpg" alt="Swan Lake" style="width:600px; height:360px;" />
 <li>Tutu</li>
   <p> A tutu is a piece of clothing worn by female ballet dancers. The Classic tutu is short and stiff and protrudes out from the hip, and the Romantic tutu is longer, softer and fall in a bell-like fashion. Tutus are usually attached to the bodice of the dress. They can be made from a number of different materials such as tulle, muslin or silk. The modern tutu comes in several different styles such as the Pancake tutu, the Platter tutu and the American tutu.</p>
   <img src="Tutu.jpg" alt="Tutu" style="width:371.5px; height:512px;" />
 <li>Dance</li>
   <p> Professional dancers train fom as early an age as 5 to become ballerinas. There are many dance companies around the world. The most prestigious among them are the Bolshoi Ballet from Russia, The American Ballet Theatre from the United States and the Paris Opera Ballet from France.</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/7zXfYygXX0I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/7zXfYygXX0I" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <li>Ballet Slippers</li>
   <p> Ballet slippers are also known as pointe shoes. They are covered in satin and come mainly in different shades of pink. The toe is traditionally made from layers of cardboard and glue that are shaped into a "box" which is how the dancer is able to balance ontheir toes. The sole is made from leather and gives the dancer traction on smooth sufaces, such as stages, but also acts as a support for the arch of the foot.</p>
-  <img src="Pointe Shoe.jpg" alt="Pointe Shoes" style="width:324px; height:187.5px;" />
+  <img src="PointeShoe.jpg" alt="Pointe Shoes" style="width:324px; height:187.5px;" />
   <p>Fun Fact: The New York City Ballet Comapny goes through over 8500 pointe shoes each year for only 100 dancers. That's 85 pairs of shoes per dancer per year and almost 8 pairs per month!</p>
   <a href="index.html">Link to Home</a>
   </ol>
