--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -8,7 +8,7 @@
 <body class=pretty>
 <h2>Ballerina-land</h2>
 <p>Ballerina-land is for those that love to dance.</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/LKcZL8q1eBw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/LKcZL8q1eBw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p>Doesn't this just make you want to get up and dance?</p> 
   <h4> World's Oldest Ballets</h4>
   <table style="width:100%" class="awesome">
