--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <a href="Ballerinaland.html">Ballerina-land</a>
     <p><i> Ballerina-Land is inspired by two little girls whose faces light up at the mention of Ballerinas. They fully believe that tutus are everyday wear, go with every outfit and that dancing is AMAZING!</i></p>
     <img src="FaveBallerina.JPG" alt="List of Ballerina Favorites" style="width:302.4px; height:403.2px;"/>
-    <p> Ballet originates from Italy in the 1500's. This was during the Renaissance Period when Europe had<br>
+    <p class="cool"> Ballet originates from Italy in the 1500's. This was during the Renaissance Period when Europe had<br>
       emerged from the Middle Ages and started to explore new ways of thinking, new ideas in architecture<br>
       and politics and overall great social change. Historians say that the birthplace of the Renaissance came<br>
       from the Italian city of Florence and the patriarchal family of Florence is credited with this emergence<br>
