--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <a href="Ballerinaland.html">Ballerina-land</a>
     <p><i> Ballerina-Land is inspired by two little girls whose faces light up at the mention of Ballerinas. They fully believe that tutus are everyday wear, go with every outfit and that dancing is AMAZING!</i></p>
     <img src="FaveBallerina.JPG" alt="List of Ballerina Favorites" style="width:302.4px; height:403.2px;"/>
-    <p class="cool"> Ballet originates from Italy in the 1500's. This was during the Renaissance Period when Europe had<br>
+    <div> Ballet originates from Italy in the 1500's. This was during the Renaissance Period when Europe had<br>
       emerged from the Middle Ages and started to explore new ways of thinking, new ideas in architecture<br>
       and politics and overall great social change. Historians say that the birthplace of the Renaissance came<br>
       from the Italian city of Florence and the patriarchal family of Florence is credited with this emergence<br>
@@ -25,6 +25,6 @@
       <i>ballet de cour</i>. The first authentic ballet was titled<i> Ballet Comique de la Reine</i> and debuted <br>
       in 1581. Since its inception, ballet has evolved into what we know it to be. In 1827 Romantic Ballet was<br>
       born with La Sylphide, performed by Marie Taglioni. It was inspired by Romanticism and also introduced<br>
-      pointework into the ballet dancers repertoire.</p>
+      pointework into the ballet dancers repertoire.</div>
   </body>
 </html>
