--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -7,9 +7,9 @@
 </head>
 <body class=pretty>
 <h2>Ballerina-land</h2>
-  <p class="neato" class="neato"><i>Ballerina-land is for those that love to dance.</i></p>
+  <p class="neato"><i>Ballerina-land is for those that love to dance.</i></p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/LKcZL8q1eBw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p>Doesn't this just make you want to get up and dance?</p> 
+  <p class="neato">Doesn't this just make you want to get up and dance?</p> 
   <h4> World's Oldest Ballets</h4>
   <table style="width:100%" class="awesome">
     <tr>
@@ -43,7 +43,7 @@
       <td> 1877 at Bolshoi Theatre</td>
     </tr>
   </table>
-  <p> The world's oldest ballets are still the most popular ones.  Among these are also Don Quixote, Romeo and Juliet and La Bayadere.</p>
+  <p class="neato"> The world's oldest ballets are still the most popular ones.  Among these are also Don Quixote, Romeo and Juliet and La Bayadere.</p>
   <a href="index.html">Link to home</a>
 </body>
 </html>
