--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -44,6 +44,6 @@
     </tr>
   </table>
   <p class="neato"> The world's oldest ballets are still the most popular ones.  Among these are also Don Quixote, Romeo and Juliet and La Bayadere.</p>
-  <a href="index.html">Link to home</a>
+  <a href="index.html">Link to home</a> <a href="Ballerina.html">Link to Ballerina</a>
 </body>
 </html>
