--- a/Ballerina.html
+++ b/Ballerina.html
@@ -21,7 +21,7 @@
   <p class="amazing"> Ballet slippers are also known as pointe shoes. They are covered in satin and come mainly in different shades of pink. The toe is traditionally made from layers of cardboard and glue that are shaped into a "box" which is how the dancer is able to balance ontheir toes. The sole is made from leather and gives the dancer traction on smooth sufaces, such as stages, but also acts as a support for the arch of the foot.</p>
   <img src="PointeShoe.jpg" alt="Pointe Shoes" style="width:324px; height:187.5px;" />
   <p class="amazing">Fun Fact: The New York City Ballet Comapny goes through over 8500 pointe shoes each year for only 100 dancers. That's 85 pairs of shoes per dancer per year and almost 8 pairs per month!</p>
-  <a href="index.html">Link to Home</a> <a hresf="Ballerinaland.html">Link to Ballerina-Land</a></li>
+  <a href="index.html">Link to Home</a> <a href="Ballerinaland.html">Link to Ballerina-Land</a></li>
   </ol>
 </body>
 </html>
