--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -5,7 +5,7 @@
 <title>CMPT 104b</title>
   <link rel="stylesheet" href="mystyle.css">
 </head>
-<body class=pretty>
+<body class=subtle>
 <h2>Ballerina-land</h2>
   <p class="neato"><i>Ballerina-land is for those that love to dance.</i></p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/LKcZL8q1eBw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
