--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -45,7 +45,7 @@
   </table>
   <p class="neato"> The world's oldest ballets are still the most popular ones.  Among these are also Don Quixote, Romeo and Juliet and La Bayadere.</p>
   <h2> Terminology</h2>
-  <p> Demi: Half<br> Pirouette: To turn<br> Plie: To bend<br> En avant: Travelling forwards<br> Glissade: To slide (from 5th to 5th)<br> Pas de bourree: Small or tight running steps<br> Pas de deux: Dance for two</p>
+  <p class="gnarly"> Demi: Half<br> Pirouette: To turn<br> Plie: To bend<br> En avant: Travelling forwards<br> Glissade: To slide (from 5th to 5th)<br> Pas de bourree: Small or tight running steps<br> Pas de deux: Dance for two</p>
   <p> There are many positions for a dancer to remember. The feet placement is the first learned so it becomes second nature. There are 5 basic feet positions and are simply named 1st position, 2nd position, 3rd position, 4th position and 5th position.</p>
   <img src="Feetpositions.jpg" alt="Feet Positions" />
   <a href="index.html">Link to home</a> <a href="Ballerina.html">Link to Ballerina</a>
