--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -48,7 +48,7 @@
   <p class="gnarly" style="text-align:center;"> Demi: Half<br> Pirouette: To turn<br> Plié: To bend<br> En avant: Travelling forwards<br> Glissade: To slide (from 5th to 5th)<br> Pas de bourrée: Small or tight running steps<br> Pas de deux: Dance for two</p>
   <p class="gnarly"> There are many positions for a dancer to remember. The feet placement is the first learned so it becomes second nature. There are 5 basic feet positions and are simply named 1st position, 2nd position, 3rd position, 4th position and 5th position.</p>
   <img src="Feetpositions.jpg" alt="Feet Positions" />
-  <p class="neato" style="text-align:center;"><i> From left to right: 1st position, 2nd position, 3rd position, 4th position and 5th position.<i></p>
+  <p class="neato" style="text-align:center;"><i> From left to right: 1st position, 2nd position, 3rd position, 4th position and 5th position.</i></p>
   <a href="index.html">Link to home</a> <a href="Ballerina.html">Link to Ballerina</a>
 </body>
 </html>
