--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="mystyle.css">
 </head>
 <body class=subtle>
-<h2>Ballerina-land</h2>
+<h2 style="text-align:center;">Ballerina-land</h2>
   <p class="neato" style="text-align:center;"><i>Ballerina-land is for those that love to dance.</i></p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/LKcZL8q1eBw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p class="neato" style="text-align:center;">Doesn't this just make you want to get up and dance?</p> 
@@ -44,7 +44,7 @@
     </tr>
   </table>
   <p class="neato"> The world's oldest ballets are still the most popular ones.  Among these are also Don Quixote, Romeo and Juliet and La Bayadere.</p>
-  <h2> Terminology</h2>
+  <h2 style="text-align:center;"> Terminology</h2>
   <p class="gnarly" style="text-align:center;"> Demi: Half<br> Pirouette: To turn<br> Plié: To bend<br> En avant: Travelling forwards<br> Glissade: To slide (from 5th to 5th)<br> Pas de bourrée: Small or tight running steps<br> Pas de deux: Dance for two</p>
   <p class="gnarly"> There are many positions for a dancer to remember. The feet placement is the first learned so it becomes second nature. There are 5 basic feet positions and are simply named 1st position, 2nd position, 3rd position, 4th position and 5th position.</p>
   <img src="Feetpositions.jpg" alt="Feet Positions" />
