--- a/Ballerina.html
+++ b/Ballerina.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="mystyle.css">
 </head>
 <body class=fancy>
-  <h3>Ballerina Factoids</h3>
+  <h3 style="text-align:center;">Ballerina Factoids</h3>
 <ol>
 <li>Ballerina
   <p class="amazing"> Ballerinas, or ballet dancers, use their bodies to tell a story through dance. Accompanied by an orchestra, they use the music to help them connect with their audience.</p>
