--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -7,7 +7,7 @@
 </head>
 <body class=subtle>
 <h2 style="text-align:center;">Ballerina-land</h2>
-  <p class="neato" style="text-align:center;"><i>Ballerina-land is for those that love to dance.</i></p>
+  <p class="neato" style="text-align:center;"><i>Ballerina-land is for those that love to dance and those that dare to dream.</i></p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/LKcZL8q1eBw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p class="neato" style="text-align:center;">Doesn't this just make you want to get up and dance?</p> 
   <h4> World's Oldest Ballets</h4>
