--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body class="subtle">
     <h1>Hello World</h1>
     <p class="neato" style="text-align:center;">Welcome to my webpage.</p>
-    <img src="Ballerinainred2.jpg" alt="Ballerina in Red" style="width:335px; height:350px;"/>
+    <img src="PinkBallerina.jpg" alt="Ballerina in Pink" style="width:374px; height:442px;"/>
     <a href="Ballerinaland.html">Ballerina-land</a>
     <p class="neato"><i> Ballerina-Land is inspired by two little girls whose faces light up at the mention of Ballerinas and ballet. They fully believe that tutus are everyday wear, go with every outfit and that dancing is AMAZING!</i></p>
     <img src="FaveBallerina.JPG" alt="List of Ballerina Favorites" style="width:302.4px; height:403.2px;"/>
