--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="BrownHair.jpg" alt="Brown Haired Ballerina" />
       </div>
       <div class="column">
-        <img src="FaveBallerina.JPG" alt="List of Ballerina Favorites" />
+        <img src="FaveBallerina.JPG" alt="List of Ballerina Favorites" style="width:302px; height:403px;" />
       </div>
       <div class="column">
         <img src="BrownHair2.jpg" alt="Brown Haired Ballerina" />
