--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="BrownHair2.jpg" alt="Brown Haired Ballerina" style="width:368px; height:395px;" />
       </div>
     </div>
-    <a href="Ballerina.html">Ballerina</a>
+    <a href="Ballerina.html">Ballerina Factoids</a>
     <p class="cool"> Ballet originates from Italy in the 1500's. This was during the Renaissance Period when Europe had emerged from<br> the Middle Ages and started to explore new ways of thinking, new ideas in architecture and politics and overall great<br> social change. Historians say that the birthplace of the Renaissance came from the Italian city of Florence and the patriarchal<br> family of Florence, the Medici's, is credited with this emergence of change. This dynasty lasted several hundred years and were<br> patrons of Michelangelo, Leonardo da Vinci, Raphael, Galileo and more. They funded St. Peter's Basilica, Santa Maria del Fiore and<br> financed the invention of opera and the piano. When Catherine de Medici married King Henry II of France she brought with her her love of<br> the arts. When festivals were being held she made the directors feature more dance numbers (for they were her favorite) and this lead to<br> a new art form called <i>ballet de cour</i>. The first authentic ballet was titled <i> Ballet Comique de la Reine</i> and debuted in 1581.<br> In 1827 Romantic Ballet was born with La Sylphide, and was performed by Marie Taglioni and was choreographed by her father to feature her. <br> It was inspired by Romanticism and also introduced pointework into the ballet dancers repertoire. Since its inception, ballet has evolved into<br> what we know, and love, it to be.</p>
   </body>
 </html>
