--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -50,6 +50,6 @@
   <p class="gnarly"> There are many positions for a dancer to remember. The feet placement is the first learned so it becomes second nature. There are 5 basic feet positions and are simply named 1st position, 2nd position, 3rd position, 4th position and 5th position.</p>
   <img src="Feetpositions.jpg" alt="Feet Positions" />
   <p class="neato" style="text-align:center;"><i> From left to right: 1st position, 2nd position, 3rd position, 4th position and 5th position.</i></p>
-  <a href="index.html">Link to home</a> <a href="Ballerina.html">Link to Ballerina</a>
+  <a href="index.html">Link to home</a> <a href="Ballerina.html">Link to Ballerina Factoids</a>
 </body>
 </html>
