--- a/Ballerinaland.html
+++ b/Ballerinaland.html
@@ -45,7 +45,7 @@
   </table>
   <p class="neato"> The world's oldest ballets are still the most popular ones.  Among these are also Don Quixote, Romeo and Juliet and La Bayadère.</p>
   <h2 style="text-align:center;"> Terminology</h2>
-  <p class="neato" style="text-align:center;"> Because Ballet became popularized in France, the majority of ballet poses, techniques and other terms are french</p>.
+  <p class="neato" style="text-align:center;"> Because Ballet became popularized in France, the majority of ballet poses, techniques and other terms are french.</p>.
   <p class="gnarly" style="text-align:center;"><b> Demi:</b> Half<br> <b>Pirouette:</b> To turn<br> <b>Plié:</b> To bend<br> <b>En avant:</b> Travelling forwards<br> <b>Glissade:</b> To slide (from 5th to 5th)<br> <b>Pas de bourrée:</b> Small or tight running steps<br> <b>Pas de deux:</b> Dance for two</p>
   <p class="gnarly"> There are many positions for a dancer to remember. The feet placement is the first learned so it becomes second nature. There are 5 basic feet positions and are simply named 1st position, 2nd position, 3rd position, 4th position and 5th position.</p>
   <img src="Feetpositions.jpg" alt="Feet Positions" />
