--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Hello World</h1>
     <p class="neato" style="text-align:center;">Welcome to my webpage.</p>
     <img src="PinkBallerina.jpg" alt="Ballerina in Pink" style="width:374px; height:442px;"/>
-    <a href="Ballerinaland.html">Ballerina-land</a>
+    <a href="Ballerinaland.html">Link to Ballerina-land</a>
     <p class="neato"><i> Ballerina-Land is inspired by two little girls whose faces light up at the mention of Ballerinas and ballet. They fully believe that tutus are everyday wear, go with every outfit and that dancing is AMAZING!</i></p>
     <div class="row">
       <div class="column">
@@ -22,7 +22,7 @@
         <img src="BrownHair2.jpg" alt="Brown Haired Ballerina" style="width:368px; height:395px;" />
       </div>
     </div>
-    <a href="Ballerina.html">Ballerina Factoids</a>
+    <a href="Ballerina.html">Link to Ballerina Factoids</a>
     <h1> History of Ballet</h1>
     <p class="cool"> Ballet originates from Italy in the 1500's. This was during the Renaissance Period when Europe had emerged from<br> the Middle Ages and started to explore new ways of thinking, new ideas in architecture and politics and overall great<br> social change. Historians say that the birthplace of the Renaissance came from the Italian city of Florence and the patriarchal<br> family of Florence, the Medici's, is credited with this emergence of change. This dynasty lasted several hundred years and were<br> patrons of Michelangelo, Leonardo da Vinci, Raphael, Galileo and more. They funded St. Peter's Basilica, Santa Maria del Fiore and<br> financed the invention of opera and the piano. When Catherine de Medici married King Henry II of France she brought with her her love of<br> the arts. When festivals were being held she made the directors feature more dance numbers (for they were her favorite) and this lead to<br> a new art form called <i>ballet de cour</i>. The first authentic ballet was titled <i> Ballet Comique de la Reine</i> and debuted in 1581.<br> In 1827 Romantic Ballet was born with La Sylphide, and was performed by Marie Taglioni and was choreographed by her father to feature her. <br> It was inspired by Romanticism and also introduced pointework into the ballet dancers repertoire. Since its inception, ballet has evolved into<br> what we know, and love, it to be.</p>
   </body>
